# eth-chains-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: cli.rs  main.rs  types.rs
