[package]
name = "eth-chains-cli"
version = "0.1.0"
description = "Tool for querying ethereum-like chains' info"
author = ["boundless.forest@outlook.com"]
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
walkdir = "2.3.2"
anyhow = "1.0.68"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
prettytable-rs = "0.10.0"
git2 = "0.16.1"
# reqwest = "0.11.15"
# tokio = { version = "1.26.0", features = ["full"] }