[package]
name = "eth-chains-cli"
author = ["boundless.forest@outlook.com"]
readme = "README.md"
repository = "https://github.com/boundless-forest/eth-chains-cli"
description = "Tool for querying ethereum-like chains' info"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.6.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
walkdir = "2.3.2"
anyhow = "1.0.68"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
colored = { version = "2.0.0" }
comfy-table = { version = "7.0.1" }